<resources>
    <string name="app_name">GreenProjectApp</string>

    <!-- LogIn and SingUp -->
    <string name="email">Email</string>
    <string name="password_signup">Mot de passe (8 caractères min.)</string>
    <string name="password_sigin">Mot de passe</string>
    <string name="verify_password">Confirmez le mot de passe</string>
    <string name="sign_up">Inscription</string>
    <string name="i_already_have_an_account">J\'ai déjà un compte</string>
    <string name="sign_in">Se conecter</string>
    <string name="or_sign_up_with">Se connecter avec</string>
    <string name="i_forgot_pasword">Mot de passe oublié ?</string>
    <string name="i_forgot_pasword_email">Email</string>
    <string name="log_in">Se connecter</string>
    <string name="name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="birth_date">Date de naissance</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="address">Adresse postale:</string>
    <string name="street_name">Numéro et nom de la voie</string>
    <string name="post_code">Code postale</string>
    <string name="city_name">Ville</string>
    <string name="country">Pays</string>
    <string name="user_information">Mes informations</string>
    <string name="made_with_love">Fait avec ❤ by HomePlanter. PlanterIn</string>
    <string name="update">Mettre à jour</string>
    <string name="home_bottom_nav">home</string>
    <string name="profile_bottom_nav">profile</string>
    <string name="explore_bottom_nav">explore</string>
    <string name="permission_denied">Autorisations refusées</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plant_description">description de la plante</string>
    <string name="fruits_explore">Des fruits</string>
    <string name="vegetables_explore">Des légumes</string>
    <string name="herbes_explore">Des herbes</string>


</resources>
