<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".Fragments.SignUpFragment">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:weightSum="100">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:srcCompat="@drawable/logoappwhite"
            android:layout_weight="40"
            android:scaleType="centerInside"
            android:padding="20dp"/>


        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:backgroundTint="@color/green_primary"
                android:hint="@string/name"
                android:imeOptions="actionDone"
                android:selectAllOnFocus="true"
                />

            <EditText
                android:id="@+id/et_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:backgroundTint="@color/green_primary"
                android:hint="@string/last_name"
                android:imeOptions="actionDone"
                android:selectAllOnFocus="true"
                />



            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green_primary"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:backgroundTint="@color/green_primary"
                android:hint="@string/password_signup"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                />

            <EditText
                android:id="@+id/et_verify_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:backgroundTint="@color/green_primary"
                android:hint="@string/verify_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"

                />


            <Button
                android:layout_margin="20dp"
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="@style/button_style"
                android:text="@string/sign_up"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                />



        </LinearLayout>



    </LinearLayout>


</layout>