<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignInFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:weightSum="100"
        >

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:srcCompat="@drawable/logoappwhite"
            android:layout_weight="40"
            android:scaleType="centerInside"
            android:padding="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/averia_sans_libre"
            android:gravity="center"
            android:text="@string/or_sign_up_with"
            android:textSize="18sp"
            android:visibility="invisible">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_margin="10dp">

            </ImageView>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_margin="10dp"
                >

            </ImageView>



        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="45"
            android:orientation="vertical">



            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green_primary"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:backgroundTint="@color/green_primary"
                android:hint="@string/password_sigin"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:clickable="true"
                android:focusable="true"
                />

            <Button
                android:id="@+id/forgot_pasword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/transparent"
                android:fontFamily="@font/averia_sans_libre"
                android:text="@string/i_forgot_pasword"
                android:textAllCaps="false"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:clickable="true"
                android:focusable="true"/>

            <Button
                android:layout_margin="10dp"
                android:id="@+id/btn_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="@style/button_style"
                android:text="@string/sign_in"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"

                />

        </LinearLayout>
    </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone">

        </ProgressBar>
    </FrameLayout>

</layout>